--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
     "argon2": "^0.43.0",
-    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -48,6 +47,7 @@
     "firebase": "^11.7.3",
     "geist": "^1.3.1",
     "genkit": "^1.8.0",
+    "jose": "^6.0.11",
     "lucide-react": "^0.475.0",
     "next": "^15.3.2",
     "next-themes": "^0.3.0",
