--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "node prisma/seed.ts"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.8.0",
@@ -74,10 +74,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
-  "prisma": {
-    "seed": {
-      "using": "ts-node",
-      "script": "prisma/seed.ts"
-    }
+  "engines": {
+    "node": ">=24"
   }
 }
