reset migration and create product seed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "IDX.aI.enableInlineCompletion": true,
     "IDX.aI.enableCodebaseIndexing": true,
     "cSpell.words": [
+        "cuid",
+        "GTIN",
         "salespider"
     ]
 }
