--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nextn",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
@@ -10,7 +11,7 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "seed": "node prisma/seed.ts"
+    "seed": "node prisma/seeds/index.ts"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.8.0",
