--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "seed": "node prisma/seeds/index.ts"
+    "seed": "node --env-file .env prisma/seeds/index.ts"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.8.0",
