Fix seed file resolution error and add TypeScript path aliases
- Fix 'Cannot find package @/lib' error in npm run seed
- Switch from node to tsx for path alias support in scripts
- Add comprehensive path aliases (@/components/*, @/lib/*, @/hooks/*, etc.)
- Update documentation with path aliases guide and uppercase .MD naming
- Refactor auth API routes to use clean imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,30 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "@/components/*": [
+        "./src/components/*"
+      ],
+      "@/lib/*": [
+        "./src/lib/*"
+      ],
+      "@/hooks/*": [
+        "./src/hooks/*"
+      ],
+      "@/contexts/*": [
+        "./src/contexts/*"
+      ],
+      "@/app/*": [
+        "./src/app/*"
+      ],
+      "@/ai/*": [
+        "./src/ai/*"
+      ],
+      "@/prisma/*": [
+        "./prisma/*"
+      ],
+      "@/types/*": [
+        "./src/types/*"
       ]
     }
   },
