--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "seed": "node --env-file .env prisma/seeds/index.ts"
+    "seed": "tsx --env-file .env prisma/seeds/index.ts"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.8.0",
@@ -72,8 +72,9 @@
     "eslint-config-next": "15.3.2",
     "genkit-cli": "^1.8.0",
     "postcss": "^8",
-    "prisma": "^6.11.1",
+    "prisma": "^6.13.0",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.20.3",
     "typescript": "^5"
   },
   "engines": {
