--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "pg": "^8.16.0",
+    "pino": "^9.9.0",
+    "pino-pretty": "^13.1.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
