--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "allowImportingTsExtensions": true,
     "skipLibCheck": true,
     "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
