--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
+    "dev:https": "npm run gen:cert && next dev --experimental-https --turbopack -p 443",
+    "gen:cert": "shx mkdir -p .cert && cd .cert && mkcert localhost 127.0.0.1 ::1",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
@@ -69,6 +71,7 @@
     "genkit-cli": "^1.8.0",
     "postcss": "^8",
     "prisma": "^6.13.0",
+    "shx": "^0.4.0",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.20.3",
     "typescript": "^5"
