Create Deshelving model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,14 @@
     "IDX.aI.enableCodebaseIndexing": true,
     "cSpell.words": [
         "cuid",
+        "Deshelve",
+        "Deshelved",
+        "deshelving",
+        "deshelvings",
+        "Genkit",
         "GTIN",
-        "salespider"
+        "parseable",
+        "salespider",
+        "understocked"
     ]
 }
