created performance monitoring and virtual table -  use it in audit log component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,11 @@
         "deshelvings",
         "Genkit",
         "GTIN",
+        "overscan",
         "parseable",
+        "placehold",
         "salespider",
+        "turbopack",
         "understocked"
     ]
 }
