--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
+    "build:webpack": "next build",
+    "analyze": "ANALYZE=true npm run build:webpack",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
@@ -74,7 +76,8 @@
     "shx": "^0.4.0",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.20.3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack-bundle-analyzer": "^4.10.2"
   },
   "engines": {
     "node": ">=24"
