chore: update configuration and dependencies
- Update .gitignore for Docker files
- Update VSCode settings
- Update README with latest features
- Update env.example with new variables
- Update seed files
- Update package dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -45,4 +45,11 @@ firebase-debug.log
 firestore-debug.log
 /src/generated/prisma
 
-.cert
+/data
+certificates
+
+# SSL certificates (keep private keys secure)
+.docker/ssl/*.pem
+.docker/ssl/*.crt
+.docker/ssl/*.key
+.docker/ssl/*.cnf
