--- a/env.example
+++ b/env.example
@@ -1,88 +1,226 @@
-# SaleSpider Environment Variables (Example)
-# Copy this file to `.env` (local dev) or configure in your hosting provider.
-# Notes:
-# - Variables prefixed with NEXT_PUBLIC_ are exposed to the browser.
-# - Booleans are strings: "true" or "false".
-# - Comma-separated lists have no spaces, e.g. A,B,C
+# SaleSpider Environment Configuration
+# Copy this file to .env and customize the values for your deployment
 
-# =============================
-# Database
-# =============================
-# Prisma uses this to connect to your database
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/salespider?schema=public"
+# =============================================================================
+# DEPLOYMENT CONFIGURATION
+# =============================================================================
 
-# =============================
-# Core App Settings (Backend)
-# =============================
-APP_NAME="SaleSpider"
-APP_LOGO=""
-PRIMARY_COLOR="#0f172a"
-SECONDARY_COLOR="#3b82f6"
-ACCENT_COLOR="#f59e0b"
-CURRENCY="NGN"
-CURRENCY_SYMBOL="₦"
-VAT_PERCENTAGE="7.5"
-TIMEZONE="Africa/Lagos"
-DATE_FORMAT="dd/MM/yyyy"
-TIME_FORMAT="HH:mm"
-LANGUAGE="en"
-THEME="light"              # one of: light,dark,auto
-MAINTENANCE_MODE="false"
-SHOW_DELETED_PRODUCTS="false"
-# Comma-separated list of PaymentMode enum values (CASH,CARD,BANK_TRANSFER,CRYPTO,OTHER)
-ENABLED_PAYMENT_METHODS="CASH,CARD,BANK_TRANSFER,CRYPTO,OTHER"
+# Project and Compose Settings
+COMPOSE_PROJECT_NAME=salespider
+COMPOSE_FILE=.docker/docker-compose.yml
 
-# =============================
-# Public App Settings (Frontend)
-# =============================
-NEXT_PUBLIC_APP_NAME="SaleSpider"
-NEXT_PUBLIC_APP_LOGO=""
-NEXT_PUBLIC_PRIMARY_COLOR="#0f172a"
-NEXT_PUBLIC_SECONDARY_COLOR="#3b82f6"
-NEXT_PUBLIC_ACCENT_COLOR="#f59e0b"
-NEXT_PUBLIC_CURRENCY="NGN"
-NEXT_PUBLIC_CURRENCY_SYMBOL="₦"
-NEXT_PUBLIC_VAT_PERCENTAGE="7.5"
-NEXT_PUBLIC_TIMEZONE="Africa/Lagos"
-NEXT_PUBLIC_DATE_FORMAT="dd/MM/yyyy"
-NEXT_PUBLIC_TIME_FORMAT="HH:mm"
-NEXT_PUBLIC_LANGUAGE="en"
-NEXT_PUBLIC_THEME="light"         # one of: light,dark,auto
-NEXT_PUBLIC_MAINTENANCE_MODE="false"
-NEXT_PUBLIC_SHOW_DELETED_PRODUCTS="false"
-# Must mirror the backend list when overriding
-NEXT_PUBLIC_ENABLED_PAYMENT_METHODS="CASH,CARD,BANK_TRANSFER,CRYPTO,OTHER"
+# Domain and Network Configuration
+DOMAIN=salespider.local
+HOST_IP=auto
+HTTP_PORT=80
+HTTPS_PORT=443
 
-# =============================
-# Auth / Security
-# =============================
-# Required for JWT signing/verification – set to a strong random string in prod
-JWT_SECRET="dev-secret-change-me"
-# e.g. 12h, 7d, 3600s
-TOKEN_EXPIRY="12h"
-# Use secure cookies (https) – set to "true" in prod; can be "false" in local dev
-COOKIE_SECURE="false"
+# Data and Backup Paths
+DATA_PATH=./data
+BACKUP_PATH=./data/backups
 
-# Initial SUPER ADMIN seed (used by prisma/seeds)
-SUPER_ADMIN_EMAIL="admin@salespider.com"
-SUPER_ADMIN_PASSWORD="Password123#"
+# =============================================================================
+# APPLICATION CONFIGURATION
+# =============================================================================
 
-# =============================
-# Logging & Environment
-# =============================
-# LOG_LEVEL: one of trace,debug,info,warn,error,fatal,silent
-LOG_LEVEL="info"
-# NODE_ENV is usually set by the runtime (development|production|test)
-# NODE_ENV="development"
+# Application Settings
+NODE_ENV=production
+APP_PORT=3000
+LOG_LEVEL=info
 
-# =============================
-# Next.js / Dev
-# =============================
-# Additional allowed dev origins (comma-separated). Example: foo.local,bar.local
-DEV_ORIGINS=""
+# Security Configuration
+JWT_SECRET=your-super-secret-jwt-key-min-32-characters-long
+TOKEN_EXPIRY=12h
+COOKIE_SECURE=true
+NEXTAUTH_SECRET=your-nextauth-secret-key-min-32-characters-long
+NEXTAUTH_URL=https://salespider.local
 
-# =============================
-# AI / LLM Providers
-# =============================
-# Google AI Studio API key for Gemini models (server-side only; do NOT expose publicly)
-GEMINI_API_KEY=""
+# Super Admin Account
+SUPER_ADMIN_EMAIL=admin@salespider.local
+SUPER_ADMIN_PASSWORD=ChangeThisPassword123!
+
+# AI Configuration
+GEMINI_API_KEY=your-gemini-api-key-here
+
+# Default App Settings (can be overridden in UI)
+APP_NAME=SaleSpider
+APP_LOGO=/logo.png
+PRIMARY_COLOR=#3b82f6
+SECONDARY_COLOR=#10b981
+ACCENT_COLOR=#f59e0b
+CURRENCY=USD
+CURRENCY_SYMBOL=$
+VAT_PERCENTAGE=0
+TIMEZONE=UTC
+DATE_FORMAT=MM/DD/YYYY
+TIME_FORMAT=12h
+LANGUAGE=en
+THEME=light
+MAINTENANCE_MODE=false
+SHOW_DELETED_PRODUCTS=false
+ENABLED_PAYMENT_METHODS=CASH,CARD,MOBILE_MONEY,BANK_TRANSFER
+
+# Client-side accessible settings (NEXT_PUBLIC_ prefix)
+NEXT_PUBLIC_APP_NAME=SaleSpider
+NEXT_PUBLIC_APP_LOGO=/logo.png
+NEXT_PUBLIC_PRIMARY_COLOR=#3b82f6
+NEXT_PUBLIC_SECONDARY_COLOR=#10b981
+NEXT_PUBLIC_ACCENT_COLOR=#f59e0b
+NEXT_PUBLIC_CURRENCY=USD
+NEXT_PUBLIC_CURRENCY_SYMBOL=$
+NEXT_PUBLIC_VAT_PERCENTAGE=0
+NEXT_PUBLIC_TIMEZONE=UTC
+NEXT_PUBLIC_DATE_FORMAT=MM/DD/YYYY
+NEXT_PUBLIC_TIME_FORMAT=12h
+NEXT_PUBLIC_LANGUAGE=en
+NEXT_PUBLIC_THEME=light
+NEXT_PUBLIC_MAINTENANCE_MODE=false
+NEXT_PUBLIC_SHOW_DELETED_PRODUCTS=false
+NEXT_PUBLIC_ENABLED_PAYMENT_METHODS=CASH,CARD,MOBILE_MONEY,BANK_TRANSFER
+
+# Feature Flags
+ENABLE_ANALYTICS=false
+ENABLE_REPORTS=true
+ENABLE_BARCODE_SCANNER=true
+OFFLINE_MODE=true
+
+# Performance Settings
+APP_MEMORY_LIMIT=2G
+APP_CPU_LIMIT=2.0
+APP_MEMORY_RESERVATION=1G
+APP_CPU_RESERVATION=1.0
+DATABASE_POOL_SIZE=10
+DATABASE_TIMEOUT=30000
+CACHE_TTL=3600
+
+# =============================================================================
+# DATABASE CONFIGURATION
+# =============================================================================
+
+# PostgreSQL Settings
+POSTGRES_DB=salespider
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=SecurePostgresPassword123!
+POSTGRES_PORT=5432
+
+# Database URLs (use service names for Docker networking)
+DATABASE_URL=postgresql://postgres:SecurePostgresPassword123!@postgres:5432/salespider?schema=public
+
+# PostgreSQL Performance Tuning
+POSTGRES_MEMORY_LIMIT=1G
+POSTGRES_CPU_LIMIT=1.0
+POSTGRES_MEMORY_RESERVATION=512M
+POSTGRES_CPU_RESERVATION=0.5
+POSTGRES_SHARED_BUFFERS=256MB
+POSTGRES_EFFECTIVE_CACHE_SIZE=1GB
+POSTGRES_WORK_MEM=4MB
+POSTGRES_MAINTENANCE_WORK_MEM=64MB
+POSTGRES_MAX_CONNECTIONS=100
+POSTGRES_MAX_WAL_SENDERS=3
+POSTGRES_WAL_KEEP_SIZE=1GB
+
+# PostgreSQL Logging
+POSTGRES_LOG_STATEMENT=none
+POSTGRES_LOG_MIN_DURATION_STATEMENT=1000
+
+# =============================================================================
+# SSL/HTTPS CONFIGURATION
+# =============================================================================
+
+# SSL Settings (using internal certificates)
+SSL_ENABLED=true
+FORCE_HTTPS=true
+
+# Security Headers
+SECURITY_HEADERS=true
+HSTS_ENABLED=true
+HSTS_MAX_AGE=31536000
+
+# Rate Limiting
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_REQUESTS=100
+RATE_LIMIT_WINDOW=1m
+
+# Proxy Settings
+PROXY_CPU_LIMIT=0.5
+PROXY_MEMORY_RESERVATION=256M
+PROXY_CPU_RESERVATION=0.25
+
+# =============================================================================
+# BACKUP CONFIGURATION (pgBackRest)
+# =============================================================================
+
+# pgBackRest Repository Type (posix, s3, azure, gcs)
+PGBACKREST_REPO1_TYPE=posix
+PGBACKREST_REPO1_PATH=/var/lib/pgbackrest
+
+# Backup Schedule (cron format)
+BACKUP_SCHEDULE_FULL=0 2 * * 0
+
+# Backup Retention
+BACKUP_RETENTION_FULL=7
+BACKUP_RETENTION_DIFF=3
+
+# pgBackRest Performance & Logging (Optional - uses defaults if not set)
+PGBACKREST_LOG_LEVEL_CONSOLE=info
+PGBACKREST_LOG_LEVEL_FILE=debug
+PGBACKREST_COMPRESS_TYPE=lz4
+PGBACKREST_COMPRESS_LEVEL=3
+PGBACKREST_PROCESS_MAX=4
+
+# Backup Resource Limits
+BACKUP_MEMORY_LIMIT=512M
+BACKUP_CPU_LIMIT=0.5
+BACKUP_MEMORY_RESERVATION=256M
+BACKUP_CPU_RESERVATION=0.25
+
+# =============================================================================
+# CLOUD STORAGE CONFIGURATION (Optional - for remote backups)
+# =============================================================================
+
+# AWS S3 (set PGBACKREST_REPO1_TYPE=s3 to enable)
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=us-east-1
+AWS_S3_BUCKET=
+# AWS S3 endpoint hostname (without https://) - e.g., s3.us-east-1.amazonaws.com
+AWS_S3_ENDPOINT=
+
+# Azure Blob Storage (set PGBACKREST_REPO1_TYPE=azure to enable)
+AZURE_STORAGE_ACCOUNT=
+AZURE_STORAGE_KEY=
+AZURE_STORAGE_CONTAINER=
+
+# Google Cloud Storage (set PGBACKREST_REPO1_TYPE=gcs to enable)
+GCS_BUCKET=
+GCS_KEY=
+
+# Logging
+ACCESS_LOG_ENABLED=true
+ERROR_LOG_ENABLED=true
+
+# =============================================================================
+# DEVELOPMENT/DEBUGGING
+# =============================================================================
+
+# Setup Options
+SKIP_SEED=false
+FORCE_RESET=false
+SETUP_SSL=true
+SETUP_BACKUP=true
+KEEP_RUNNING=false
+
+# Development Settings (set to false in production)
+DEBUG=false
+VERBOSE_LOGGING=false
+
+# =============================================================================
+# PLATFORM-SPECIFIC OVERRIDES
+# =============================================================================
+
+# These will be automatically detected and set by the deployment script
+# Override only if you need specific values
+
+# PLATFORM=linux|macos|windows
+# ARCHITECTURE=amd64|arm64
+# DOCKER_COMPOSE_CMD=docker-compose|docker compose
