chore: set Nigerian Naira (NGN) as default currency in env.example
- Update CURRENCY to NGN (was USD)
- Update CURRENCY_SYMBOL to ₦ (was $)
- Update VAT_PERCENTAGE to 7.5 (was 0)
- Update TIMEZONE to Africa/Lagos (was UTC)
- Update date/time formats to match Nigerian standards

--- a/env.example
+++ b/env.example
@@ -44,16 +44,16 @@ GEMINI_API_KEY=your-gemini-api-key-here
 
 # Default App Settings (can be overridden in UI)
 APP_NAME=SaleSpider
-APP_LOGO=/logo.png
+APP_LOGO=
 PRIMARY_COLOR=#3b82f6
 SECONDARY_COLOR=#10b981
 ACCENT_COLOR=#f59e0b
-CURRENCY=USD
-CURRENCY_SYMBOL=$
-VAT_PERCENTAGE=0
-TIMEZONE=UTC
-DATE_FORMAT=MM/DD/YYYY
-TIME_FORMAT=12h
+CURRENCY=NGN
+CURRENCY_SYMBOL=₦
+VAT_PERCENTAGE=7.5
+TIMEZONE=Africa/Lagos
+DATE_FORMAT=dd/MM/yyyy
+TIME_FORMAT=HH:mm
 LANGUAGE=en
 THEME=light
 MAINTENANCE_MODE=false
@@ -62,16 +62,16 @@ ENABLED_PAYMENT_METHODS=CASH,CARD,MOBILE_MONEY,BANK_TRANSFER
 
 # Client-side accessible settings (NEXT_PUBLIC_ prefix)
 NEXT_PUBLIC_APP_NAME=SaleSpider
-NEXT_PUBLIC_APP_LOGO=/logo.png
+NEXT_PUBLIC_APP_LOGO=
 NEXT_PUBLIC_PRIMARY_COLOR=#3b82f6
 NEXT_PUBLIC_SECONDARY_COLOR=#10b981
 NEXT_PUBLIC_ACCENT_COLOR=#f59e0b
-NEXT_PUBLIC_CURRENCY=USD
-NEXT_PUBLIC_CURRENCY_SYMBOL=$
-NEXT_PUBLIC_VAT_PERCENTAGE=0
-NEXT_PUBLIC_TIMEZONE=UTC
-NEXT_PUBLIC_DATE_FORMAT=MM/DD/YYYY
-NEXT_PUBLIC_TIME_FORMAT=12h
+NEXT_PUBLIC_CURRENCY=NGN
+NEXT_PUBLIC_CURRENCY_SYMBOL=₦
+NEXT_PUBLIC_VAT_PERCENTAGE=7.5
+NEXT_PUBLIC_TIMEZONE=Africa/Lagos
+NEXT_PUBLIC_DATE_FORMAT=dd/MM/yyyy
+NEXT_PUBLIC_TIME_FORMAT=HH:mm
 NEXT_PUBLIC_LANGUAGE=en
 NEXT_PUBLIC_THEME=light
 NEXT_PUBLIC_MAINTENANCE_MODE=false
