--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - "${HTTP_PORT:-80}:80"
       - "${HTTPS_PORT:-443}:443"
 
-  # Database Backup with pgBackRest
+  # Database Backup with pgBackRest (only when backup is enabled)
   backup:
     extends:
       file: compose/backup.yml
@@ -42,6 +42,8 @@ services:
         condition: service_healthy
     networks:
       - salespider-net
+    profiles:
+      - backup
 
   # Setup and Initialization
   setup:
@@ -102,7 +104,7 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: ${BACKUP_PATH:-./data/backups}/pgBackRest
+      device: ${BACKUP_PATH:-./data/backups}/pgbackrest
 
   backup-logs:
     driver: local
