--- a/env.example
+++ b/env.example
@@ -104,7 +104,7 @@ POSTGRES_PASSWORD=SecurePostgresPassword123!
 POSTGRES_PORT=5432
 
 # Database URLs (use service names for Docker networking)
-DATABASE_URL=postgresql://postgres:SecurePostgresPassword123!@postgres:5432/salespider?schema=public
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public"
 
 # PostgreSQL Performance Tuning
 POSTGRES_MEMORY_LIMIT=1G
@@ -139,34 +139,22 @@ HSTS_MAX_AGE=31536000
 # Rate Limiting
 RATE_LIMIT_ENABLED=true
 RATE_LIMIT_REQUESTS=100
-RATE_LIMIT_WINDOW=1m
-
-# Proxy Settings
-PROXY_CPU_LIMIT=0.5
-PROXY_MEMORY_RESERVATION=256M
-PROXY_CPU_RESERVATION=0.25
+RATE_LIMIT_WINDOW="1m"
 
 # =============================================================================
 # BACKUP CONFIGURATION (pgBackRest)
 # =============================================================================
 
 # pgBackRest Repository Type (posix, s3, azure, gcs)
-PGBACKREST_REPO1_TYPE=posix
+PGBACKREST_REPO1_TYPE=none
 PGBACKREST_REPO1_PATH=/var/lib/pgbackrest
 
 # Backup Schedule (cron format)
-BACKUP_SCHEDULE_FULL=0 2 * * 0
+BACKUP_SCHEDULE_FULL="0 2 * * 0"
 
 # Backup Retention
 BACKUP_RETENTION_FULL=7
 BACKUP_RETENTION_DIFF=3
-
-# pgBackRest Performance & Logging (Optional - uses defaults if not set)
-PGBACKREST_LOG_LEVEL_CONSOLE=info
-PGBACKREST_LOG_LEVEL_FILE=debug
-PGBACKREST_COMPRESS_TYPE=lz4
-PGBACKREST_COMPRESS_LEVEL=3
-PGBACKREST_PROCESS_MAX=4
 
 # Backup Resource Limits
 BACKUP_MEMORY_LIMIT=512M
@@ -179,21 +167,21 @@ BACKUP_CPU_RESERVATION=0.25
 # =============================================================================
 
 # AWS S3 (set PGBACKREST_REPO1_TYPE=s3 to enable)
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=us-east-1
-AWS_S3_BUCKET=
-# AWS S3 endpoint hostname (without https://) - e.g., s3.us-east-1.amazonaws.com
-AWS_S3_ENDPOINT=
+AWS_ACCESS_KEY_ID=your-aws-access-key-id
+AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
+AWS_REGION=eu-north-1
+AWS_S3_BUCKET=your-s3-bucket-name
+# AWS_S3_ENDPOINT=http://localhost.localstack.cloud:4566
+AWS_S3_ENDPOINT=s3.eu-north-1.amazonaws.com
 
 # Azure Blob Storage (set PGBACKREST_REPO1_TYPE=azure to enable)
-AZURE_STORAGE_ACCOUNT=
-AZURE_STORAGE_KEY=
-AZURE_STORAGE_CONTAINER=
+# AZURE_STORAGE_ACCOUNT=
+# AZURE_STORAGE_KEY=
+# AZURE_STORAGE_CONTAINER=
 
 # Google Cloud Storage (set PGBACKREST_REPO1_TYPE=gcs to enable)
-GCS_BUCKET=
-GCS_KEY=
+# GCS_BUCKET=
+# GCS_KEY=
 
 # Logging
 ACCESS_LOG_ENABLED=true
@@ -206,7 +194,6 @@ ERROR_LOG_ENABLED=true
 # Setup Options
 SKIP_SEED=false
 FORCE_RESET=false
-SETUP_SSL=true
 SETUP_BACKUP=true
 KEEP_RUNNING=false
 
@@ -224,3 +211,15 @@ VERBOSE_LOGGING=false
 # PLATFORM=linux|macos|windows
 # ARCHITECTURE=amd64|arm64
 # DOCKER_COMPOSE_CMD=docker-compose|docker compose
+
+# Additional PostgreSQL connection variables for services
+PGHOST=postgres
+PGPORT=5432
+PGUSER=postgres
+POSTGRES_HOST=postgres
+
+# Check interval for monitoring
+CHECK_INTERVAL=60
+
+# Script variables for setup
+script=
