--- a/.docker/compose/backup.yml
+++ b/.docker/compose/backup.yml
@@ -4,7 +4,7 @@ services:
     container_name: ${COMPOSE_PROJECT_NAME:-salespider}-backup
     
     environment:
-      PGBACKREST_REPO1_TYPE: ${PGBACKREST_REPO1_TYPE:-posix}
+      PGBACKREST_REPO1_TYPE: ${PGBACKREST_REPO1_TYPE:-none}
       PGBACKREST_REPO1_PATH: ${PGBACKREST_REPO1_PATH:-/var/lib/pgbackrest}
       PGBACKREST_REPO1_S3_BUCKET: ${AWS_S3_BUCKET:-}
       PGBACKREST_REPO1_S3_ENDPOINT: ${AWS_S3_ENDPOINT:-}
