--- a/.docker/compose/setup.yml
+++ b/.docker/compose/setup.yml
@@ -22,7 +22,7 @@ services:
       - CERT_DAYS=${CERT_DAYS:-3650}
       
       # pgBackRest Configuration
-      - PGBACKREST_REPO1_TYPE=${PGBACKREST_REPO1_TYPE:-posix}
+      - PGBACKREST_REPO1_TYPE=${PGBACKREST_REPO1_TYPE:-none}
       - PGBACKREST_REPO1_PATH=${PGBACKREST_REPO1_PATH:-/var/lib/pgbackrest}
       - PGBACKREST_REPO1_S3_BUCKET=${AWS_S3_BUCKET:-}
       - PGBACKREST_REPO1_S3_ENDPOINT=${AWS_S3_ENDPOINT:-}
