--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,8 +78,10 @@
         "redir",
         "resolv",
         "salespider",
+        "sslmode",
         "strm",
         "stylelintcache",
+        "Supabase",
         "turbopack",
         "understocked",
         "urandom",
