docs: consolidate and streamline documentation structure
  Major documentation overhaul to eliminate duplication and improve usability:

  - Consolidated 4 backup documentation files into comprehensive BACKUP_GUIDE.md
  - Merged deployment instructions from 5 scattered files into DEPLOYMENT_GUIDE.md
  - Created complete ENVIRONMENT_VARIABLES.md reference for all configuration options
  - Streamlined README.md to focus on quick start and project overview
  - Removed 6 redundant documentation files after consolidation

  Configuration improvements:
  - Removed redundant PostgreSQL environment variables (PGHOST, PGPORT, PGUSER, POSTGRES_HOST)
  - Replaced hardcoded values with environment variables throughout Docker configurations
  - Added PGBACKREST_STANZA environment variable for configurable backup stanza names
  - Removed Slack webhook integration to simplify notification system

  Result: Clean documentation structure with 6 focused guides instead of 12+ overlapping files,
  zero duplication, and fully configurable deployment without hardcoded values.

--- a/.docker/compose/backup.yml
+++ b/.docker/compose/backup.yml
@@ -16,11 +16,12 @@ services:
       # PGBACKREST_REPO1_AZURE_CONTAINER: ${AZURE_STORAGE_CONTAINER:-}
       # PGBACKREST_REPO1_GCS_BUCKET: ${GCS_BUCKET:-}
       # PGBACKREST_REPO1_GCS_KEY: ${GCS_KEY:-}
-      PGHOST: postgres
+      PGHOST: ${POSTGRES_HOST:-postgres}
       PGPORT: ${POSTGRES_PORT:-5432}
       PGUSER: ${POSTGRES_USER:-postgres}
       PGPASSWORD: ${POSTGRES_PASSWORD}
       PGDATABASE: ${POSTGRES_DB:-salespider}
+      PGBACKREST_STANZA: ${PGBACKREST_STANZA:-salespider}
       BACKUP_SCHEDULE_FULL: ${BACKUP_SCHEDULE_FULL:-0 2 * * 0}
       BACKUP_SCHEDULE_DIFF: ${BACKUP_SCHEDULE_DIFF:-0 2 * * 1-6}
       BACKUP_RETENTION_FULL: ${BACKUP_RETENTION_FULL:-8}
@@ -46,7 +47,7 @@ services:
     command: ["sh", "/scripts/start-pgbackrest.sh"]
     
     healthcheck:
-      test: ["CMD", "pgbackrest", "--stanza=salespider", "info"]
+      test: ["CMD", "sh", "-c", "pgbackrest --stanza=${PGBACKREST_STANZA:-salespider} info"]
       interval: 60s
       timeout: 30s
       retries: 3
