--- a/.docker/compose/setup.yml
+++ b/.docker/compose/setup.yml
@@ -5,7 +5,7 @@ services:
     
     environment:
       # Database Configuration
-      - POSTGRES_HOST=postgres
+      - POSTGRES_HOST=${POSTGRES_HOST:-postgres}
       - POSTGRES_PORT=${POSTGRES_PORT:-5432}
       - POSTGRES_DB=${POSTGRES_DB:-salespider}
       - POSTGRES_USER=${POSTGRES_USER:-postgres}
