fix: exclude i18n.ts from sonarqube scan

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,7 +17,7 @@ sonar.javascript.file.suffixes=.js,.jsx
 sonar.test.inclusions=**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx
 
 # Exclusions
-sonar.exclusions=**/*.config.js,**/*.config.ts,**/node_modules/**,**/.next/**,**/dist/**,**/build/**,**/coverage/**
+sonar.exclusions=**/*.config.js,**/*.config.ts,**/node_modules/**,**/.next/**,**/dist/**,**/build/**,**/coverage/**,src/lib/i18n.ts
 
 # File-specific exclusions
 # Ignore i18n translation files due to expected duplication in translations
