fix: ignore i18n file for sonarqube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.projectVersion=0.1.0
 
 # Source code
 sonar.sources=src
-sonar.tests=src
+sonar.tests=src/**/*.{test,spec}.{ts,tsx}
 
 # Language and file patterns
 sonar.typescript.file.suffixes=.ts,.tsx
@@ -19,8 +19,15 @@ sonar.test.inclusions=**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx
 # Exclusions
 sonar.exclusions=**/*.config.js,**/*.config.ts,**/node_modules/**,**/.next/**,**/dist/**,**/build/**,**/coverage/**,src/lib/i18n.ts
 
-# File-specific exclusions
-# Ignore i18n translation files due to expected duplication in translations
+# --- Exclude file from specific rule: Hard-coded password ---
+sonar.issue.ignore.multicriteria=e1
+sonar.issue.ignore.multicriteria.e1.ruleKey=typescript:S2068
+sonar.issue.ignore.multicriteria.e1.resourceKey=src/lib/i18n.ts
+
+# --- Exclude file from duplication checks ---
+sonar.cpd.exclusions=src/lib/i18n.ts
+
+# --- Exclude file from coverage ---
 sonar.coverage.exclusions=src/lib/i18n.ts
 
 # JavaScript/TypeScript specific settings
