--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,10 +19,12 @@ sonar.test.inclusions=**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx
 # Exclusions
 sonar.exclusions=**/*.config.js,**/*.config.ts,**/node_modules/**,**/.next/**,**/dist/**,**/build/**,**/coverage/**,src/lib/i18n.ts
 
-# --- Exclude file from specific rule: Hard-coded password ---
-sonar.issue.ignore.multicriteria=e1
+# --- Exclude files from specific rules ---
+sonar.issue.ignore.multicriteria=e1,e2
 sonar.issue.ignore.multicriteria.e1.ruleKey=typescript:S2068
 sonar.issue.ignore.multicriteria.e1.resourceKey=src/lib/i18n.ts
+sonar.issue.ignore.multicriteria.e2.ruleKey=typescript:S2245
+sonar.issue.ignore.multicriteria.e2.resourceKey=prisma/seeds/**,src/components/ui/sidebar.tsx
 
 # --- Exclude file from duplication checks ---
 sonar.cpd.exclusions=src/lib/i18n.ts
