fix: minor coding standard fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,5 +88,9 @@
         "urllib",
         "urlparse",
         "zstd"
-    ]
+    ],
+    "sonarlint.connectedMode.project": {
+        "connectionId": "idrisakintobi",
+        "projectKey": "IdrisAkintobi_SaleSpider"
+    }
 }
